fixed wrapping issue

--- a/src/app/profile/experience/experience.component.css
+++ b/src/app/profile/experience/experience.component.css
@@ -1,24 +1,22 @@
-.experience_container{
-  list-style: none;
-  padding-right: 25%;
-  width: auto;
+.experience_container {
+    list-style: none;
+    padding-right: 25%;
+    width: auto;
 }
 
 .experience_container div ul {
-   margin:0;
+    margin: 0;
 }
 
-.experience_row
-{
-   margin-bottom: 15%;    
+.experience_row {
+    margin-bottom: 15%;
 }
 
 .experience_row input[type=text]:disabled+label {
     color: #ABEBE6;
 }
 
-.experience_row textarea.materialize-textarea
-{
+.experience_row textarea.materialize-textarea {
     color: rgb(36, 60, 97);
     border-bottom: 1px solid #7FE6D4;
     padding: 0 0 2px 0;
@@ -26,12 +24,11 @@
     height: 1rem;
     min-height: 1rem;
     width: 100%;
-    font-size: inherit; 
+    font-size: inherit;
 }
 
-.experience_row input[mkbTextWeight=large]
-{
-     font-size: 1.4em;
+.experience_row input[mkbTextWeight=large] {
+    font-size: 1.4em;
 }
 
 .experience_row input[mkbTextWeight=small] {
@@ -42,30 +39,25 @@
     margin-top: 15px;
 }
 
-.experience_row .input-field label
-{
-    font-size: 0.85rem; 
-    color:#ABEBE6;
+.experience_row .input-field label {
+    font-size: 0.85rem;
+    color: #ABEBE6;
 }
 
-.experience_row label[mkbTextWeight=large]
-{
-     font-size: 1.2em; 
+.experience_row label[mkbTextWeight=large] {
+    font-size: 1.2em;
 }
 
-.experience_row label[mkbTextWeight=small]
-{
-    font-size: 0.8em; 
+.experience_row label[mkbTextWeight=small] {
+    font-size: 0.8em;
 }
 
-.experience_row input[type=text]:disabled
-{
+.experience_row input[type=text]:disabled {
     color: rgb(36, 60, 97);
     border-bottom: 1px solid #7FE6D4;
 }
 
-.experience_row input[type=text]
-{
+.experience_row input[type=text] {
     margin: 0;
     height: 1.8em;
 }
@@ -74,4 +66,8 @@
     margin-bottom: 0;
     line-height: normal;
     font-size: 0.9rem;
+}
+
+.experience_row textarea[mkbTextWeight=large] {
+    font-size: 1.4em;
 }
