--- a/src/app/profile/profile-manager.component.css
+++ b/src/app/profile/profile-manager.component.css
@@ -68,6 +68,7 @@
     display: table-cell;
     color: #FFFFFF;
     cursor: pointer;
+    padding-left: 0px !important;
 }
 
 .profile-wrapper {
@@ -111,9 +112,9 @@
     color: rgb(34, 60, 97);
 }
 
-
 .navBarPage-title {
     display: none;
+    padding-left: 1rem;
 }
 
 .profileContent-container {
@@ -180,9 +181,9 @@
         display: none;
     }
     .container {
-        top: 15%;
-        left: 20%;
-        width: 50%;
+        /*top: 15%;*/
+        /*left: 20%;*/
+        width: 95%;
     }
     .navBarPage-title {
         font-size: 1em !important;
@@ -196,9 +197,22 @@
     }
     nav ul li {
         font-size: 2em;
-        padding-left: 1rem;
+        padding-right: 1rem;
     }
     .logout-button {
         margin: 0.5rem;
+    }
+}
+
+@media only screen and (max-width: 245px) {
+    .navBarPage-title {
+        font-size: 0.5em !important;
+        font-weight: normal;
+        color: #FFFFFF;
+        display: inline;
+    }
+    nav ul a {
+        padding: 0;
+        font-weight: bold;
     }
 }
